# YooY-Wallet

./: .cursorignore  .env  .env.dev  .env.prod  .env.stg  .gitignore  .npmrc  CURSOR_STABILITY.md  FIREBASE_ENVIRONMENTS.md  QR코드 -1.psd  YooY Namecard.ai  app.config-chat.json  app.config.js  app.json  babel.config.js  build-failure.txt  build-release.ps1  cors.json  crash.txt  crash_excerpt.txt  download-final-logos.js  download-missing-logos.js  download-remaining-logos.js  eas.json  firebase-cors.dev.json  firebase.json  firestore.indexes.json  firestore.rules  metro.config.cjs  metro.config.js  package-lock.json  package.backup.json  package.json  proguard-rules.pro  react-native.config.js  rn-log.txt  rn-startup.txt  storage.rules  yooyland-app.txt  yooyland-sync-focus.txt  (+1 more)
android/: build.gradle  crash.txt  crash_excerpt.txt  crash_full.txt  crash_repro.txt  gradle.properties  key.properties.example  local.properties  rn-startup.txt  settings.gradle  version.properties
android/disabled/react-native-worklets/: CMakeLists.txt  build.gradle
android/disabled/react-native-worklets/src/main/cpp/: stub.c  stub.cpp
android/disabled/react-native-worklets/src/main/java/com/swmansion/worklets/: JSCallInvokerResolver.java  WorkletsModule.java  WorkletsPackage.java
android_backup/: build.gradle  gradle.properties  settings.gradle
app/: +html.tsx  +not-found.tsx  _layout.tsx  cev.tsx  chat-debug.tsx  entry.tsx  global.css  index.tsx  nft.tsx  system.tsx
components/: AdminCEVInline.tsx  Board.tsx  CEVInline.tsx  ChatBottomBar.tsx  CoinDetailModal.tsx  NFTInline.tsx  (+13 more)
(+378 files in other folders)
